--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 1
-  script: python -m pip install . --no-deps --ignore-installed --verbose
+  script: "{{ PYTHON }} -m pip install . --no-deps  --ignore-installed --verbose"
 
 requirements:
   host:
