removing version pinning from run requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,9 @@ requirements:
     - enum34 >=1.1.6  # [py2k]
     - futures >=3.0.5  # [py2k]
   run:
-    - {{ pin_compatible('google-api-core-grpc') }}
-    - {{ pin_compatible('enum34') }}  # [py2k]
-    - {{ pin_compatible('futures') }}  # [py2k]
+    - google-api-core-grpc
+    - enum34  # [py2k]
+    - futures  # [py2k]
 
 test:
   imports:
