setting unversioned python run requirement

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,12 +15,13 @@ build:
 
 requirements:
   host:
-    - python >=2.7
+    - python
     - pip >=18.1
     - google-api-core-grpc >=1.6.0
     - enum34 >=1.1.6  # [py2k]
     - futures >=3.0.5  # [py2k]
   run:
+    - python
     - google-api-core-grpc
     - enum34  # [py2k]
     - futures  # [py2k]
