--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - enum34 >=1.1.6  # [py2k]
     - futures >=3.0.5  # [py2k]
   run:
-    - google-api-core-grpc
+    - {{ pin_compatible('google-api-core-grpc') }}
     - enum34  # [py2k]
     - futures  # [py2k]
 
