set c and cxx build compiler requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,16 +15,19 @@ build:
   skip: True  # [win and vc<14]
 
 requirements:
+  build:
+    - {{ compiler('c') }}     # [not win]
+    - {{ compiler('cxx') }}   # [not win]
   host:
     - python
     - pip >=18.1
     - google-api-core-grpc >=1.6.0
-    - enum34 >=1.1.6  # [py2k]
-    - futures >=3.0.5  # [py2k]
+    - enum34 >=1.1.6  # [py27]
+    - futures >=3.0.5  # [py27]
   run:
     - {{ pin_compatible('google-api-core-grpc') }}
-    - enum34  # [py2k]
-    - futures  # [py2k]
+    - enum34  # [py27]
+    - futures  # [py27]
 
 test:
   imports:
@@ -77,7 +80,9 @@ about:
 
     **Deprecated Python Versions**
 
-    Python == 2.7. Python 2.7 support will be removed on January 1, 2020.
+    Python == 2.7
+    - Python 2.7 support will be removed on January 1, 2020.
+    - protobuf does not support Visual C++ 2008, windows py27 package not available
 
   doc_url: https://googleapis.github.io/google-cloud-python/latest/container/index.html
   dev_url: https://github.com/googleapis/google-cloud-python/tree/master/container
