--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,9 @@ requirements:
   run:
     - python >=3.6
     - google-api-core-grpc >=1.31.5,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0
-    - grpc-google-iam-v1 >=0.12.3,<0.13dev
-    - proto-plus >=1.15.0
+    - grpc-google-iam-v1 >=0.12.4,<0.13dev
+    - proto-plus >=1.15.0,<2.0.0dev
+    - protobuf >=3.19.0,<4.0.0dev
 
 test:
   imports:
