--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,9 @@ source:
   sha256: aff02675c5c80a112aa7702f3b6c54da5b0cde9aa69ff4e6bfcfdc409fa4b821
 
 build:
-  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
@@ -20,8 +20,7 @@ requirements:
     - pip
   run:
     - python >=3.7
-    - google-api-core-grpc >=1.32.0,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*
-    - grpc-google-iam-v1 >=0.12.4,<0.13dev
+    - google-api-core-grpc >=1.34.0,<3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,!=2.10.*
     - proto-plus >=1.22.0,<2.0.0dev
     - protobuf >=3.19.5,<5.0.0dev,!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5
 
@@ -38,10 +37,10 @@ test:
 
 about:
   home: https://github.com/googleapis/python-container
+  summary: Google Cloud Container API client library
   license: Apache-2.0
   license_family: Apache
   license_file: LICENSE
-  summary: Google Container Engine API client library
   description: |
     **Python Client for Google Kubernetes Engine API**
 
